--- a/source/makefile_test
+++ b/source/makefile_test
@@ -1,62 +1,44 @@
-# Makefile template for shared library
+# Makefile
+DTARGET := build/testDyn
+STARGET := build/testStat
+
+# defining the source files for the project
+SRCFILES := tests/test.cpp
+
+INCPATH    := -I includes/
+LIBSPATH    := build/libs/linux_$(arch)/
+LIBSPATHEXE := libs/linux_$(arch)
+DLIBSDEF    :=  -lraumkernel
+SLIBSDEF    :=  -Bstatic $(LIBSPATH)libraumkernel.a libs/linux_$(arch)/libohNetCore.a libs/linux_$(arch)/libohNetDevices.a libs/linux_$(arch)/libohNetProxies.a
+
+
+ifeq ($(arch),) 
+  COMPILER          := g++
+  ARCHITECTURE      := 
+  ARCHCOMPILERFLAGS :=
+endif
 
 ifeq ($(arch),X64) 
-  ARCHITECTURE = -m64
-  CC = g++-4.9
-  CXX = g++-4.9
-  LIBSPATH = libs/linux_x64/
-  TARGET = testX64
-endif
-	
-ifeq ($(arch),X86) 
-  ARCHITECTURE = -m32 
-  CC = g++-4.9
-  CXX = g++-4.9
-  LIBSPATH = libs/linux_x86/
-  TARGET = testX86
-endif
-
-ifeq ($(arch),ARMA53)
-  ARCHITECTURE = -march=armv8-a
-  CC = arm-linux-gnueabihf-g++-4.9 
-  CXX = arm-linux-gnueabihf-g++-4.9
-  LIBSPATH = libs/linux_ARMA53/
-  TARGET = testARMA53
+  COMPILER          := g++-4.9
+  ARCHITECTURE      := -m64
+  ARCHCOMPILERFLAGS :=
 endif
 
 ifeq ($(arch),ARMV7HF)
-  ARCHITECTURE = 
-  CC = arm-linux-gnueabihf-g++-4.9 
-  CXX = arm-linux-gnueabihf-g++-4.9
-  LIBSPATH = libs/linux_ARMV7/
-  TARGET = testARMV7HF
-endif
-
-ifeq ($(arch),ARMV6)
-  ARCHITECTURE = -march=armv6
-  CC = arm-linux-gnueabi-g++-4.9 
-  CXX = arm-linux-gnueabi-g++-4.9
-  LIBSPATH = libs/linux_ARMV6/
-  TARGET = testARMV6
+  COMPILER          := arm-linux-gnueabihf-g++-4.9 
+  ARCHITECTURE      := -march=armv7-a
+  ARCHCOMPILERFLAGS := -fasynchronous-unwind-tables -mapcs-frame
 endif
 
 ifeq ($(arch),ARMV5TE)
-  ARCHITECTURE = -march=armv5te -mtune=xscale
-  CC = arm-linux-gnueabi-g++-4.9 
-  CXX = arm-linux-gnueabi-g++-4.9
-  LIBSPATH = libs/linux_ARMV5/
-  TARGET = testARMV5TE
+  COMPILER          := arm-linux-gnueabi-g++-4.9 
+  ARCHITECTURE      := -march=armv5te -mtune=xscale
+  ARCHCOMPILERFLAGS := -fasynchronous-unwind-tables -mapcs-frame
 endif 
 
-ifeq ($(arch),AMDGEODE)
-  ARCHITECTURE = -m32 -march=geode -mtune=generic
-  CC = arm-linux-gnueabi-g++-4.9 
-  CXX = arm-linux-gnueabi-g++-4.9
-  LIBSPATH = libs/linux_AMDGEODE/
-  TARGET = libs/_tmpBuild/raumkernel.so
-endif 
 
-LIBSDEF =  $(LIBSPATH)raumkernel.so
+COMPILERFLAGS :=  -std=c++11 -fPIC -Wall -Wno-unknown-pragmas -Wno-unused-parameter -funwind-tables -Wextra -O2 -c -pthread 
+LINKERFLAGS   :=  -pthread -static-libgcc -static-libstdc++ -rdynamic -L$(LIBSPATH) -Wl,-rpath,$(LIBSPATHEXE) 
 
 
 DEBUG = 
@@ -64,34 +46,52 @@ ifeq ($(dbg),1)
   DEBUG = -g
 endif
 
-INCPATH = -I includes/
+DLINKERFLAGS  	 := $(ARCHITECTURE) $(LINKERFLAGS)
+SLINKERFLAGS  	 := $(ARCHITECTURE) $(LINKERFLAGS)
+DCOMPILERFLAGS   := $(ARCHITECTURE) $(COMPILERFLAGS) $(DEBUG) $(ARCHCOMPILERFLAGS) $(INCPATH)
+SCOMPILERFLAGS   := $(ARCHITECTURE) $(COMPILERFLAGS) $(DEBUG) $(ARCHCOMPILERFLAGS) $(INCPATH)
 
-CFLAGS = $(ARCHITECTURE) -std=c++11 -fPIC -Wall -Wno-unknown-pragmas -Wno-unused-parameter -Wextra -O2 $(DEBUG) -c -pthread $(INCPATH)
-CXXFLAGS = $(ARCHITECTURE) -std=c++11 -fPIC -Wall -Wno-unknown-pragmas -Wno-unused-parameter -Wextra -O2 $(DEBUG) -c -pthread $(INCPATH)
-LDFLAGS = $(ARCHITECTURE) -pthread -static-libgcc -static-libstdc++
+RM  := rm -f 
+RMR := rm -rf
 
-RM = rm -f 
+DOBJDIR := build/obj-dyn/
+SOBJDIR := build/obj-stat/
 
-SRCS = test.cpp
-
-OBJS = $(SRCS:.cpp=.o)
+DOBJFILES := $(addprefix $(DOBJDIR), $(SRCFILES:.cpp=.o))
+SOBJFILES := $(addprefix $(SOBJDIR), $(SRCFILES:.cpp=.o))
 
 
 .PHONY: all
-all: ${TARGET}
-
-$(TARGET): $(OBJS)
-	$(CC) ${LDFLAGS} -o $@ $^ $(LIBSDEF)
- 
-$(SRCS:.cpp=.d):%.d:%.cpp
-	$(CC) $(CFLAGS) -MM $< >$@
-
-include $(SRCS:.cpp=.d)
 
 
-#.PHONY: clean
-#clean:
-#	-${RM} ${TARGET} ${OBJS} $(SRCS:.cpp=.d) 
+### when calling make then build static and dynamic target
+all: ${DTARGET} ${STARGET}
+	
+### create dynamic library
+$(DTARGET): $(DOBJFILES)	
+	$(COMPILER) ${DLINKERFLAGS} -o $@ $^ $(DLIBSDEF) 
+
+$(DOBJDIR)%.o: %.cpp
+	@ mkdir -p $(basename $@)
+	$(COMPILER) $(DCOMPILERFLAGS) -MMD -c -o $@ $<
+
+-include $(DOBJFILES:.o=.d)
+
+
+### create static library
+$(STARGET): $(SOBJFILES)	
+	$(COMPILER) ${SLINKERFLAGS} -o $@ $^ $(SLIBSDEF) 
+
+$(SOBJDIR)%.o: %.cpp
+	@ mkdir -p $(basename $@)
+	$(COMPILER) $(SCOMPILERFLAGS) -MMD -c -o $@ $<
+
+-include $(SOBJFILES:.o=.d)
+
+
+
+### clear all build relevant files 
 .PHONY: clean
 clean:
-	-${RM} ${TARGET} ${OBJS} $(SRCS:.cpp=.d) 
+	-${RM} ${DTARGET} ${STARGET} ${DOBJFILES} ${SOBJFILES} $(DOBJFILES:.o=.d) 
+	-${RMR} ${DOBJDIR} ${SOBJDIR}
