--- a/source/RaumkernelTest.vcxproj
+++ b/source/RaumkernelTest.vcxproj
@@ -10,6 +10,9 @@
       <Platform>Win32</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="tests\test.cpp" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{566C10A5-4DE9-46C2-BA62-03FDCFA05C3B}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
@@ -81,9 +84,6 @@
       <AdditionalDependencies>$(SolutionDir)$(Configuration)\raumkernel.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="test.cpp" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
