--- a/source/makefile
+++ b/source/makefile
@@ -18,7 +18,6 @@ SRCFILES += $(wildcard xml/pugixml/*.cpp)
 INCPATH     := -I includes/
 LIBSPATH    := libs/linux_$(arch)/
 LIBSPATHEXE := libs
-#LIBSPATHEXE := ./
 DLIBSDEF    :=  $(LIBSPATH)libohNetCore.a $(LIBSPATH)libohNetDevices.a $(LIBSPATH)libohNetProxies.a
 SLIBSDEF    :=  $(LIBSPATH)libohNetCore.a $(LIBSPATH)libohNetDevices.a $(LIBSPATH)libohNetProxies.a
 
@@ -27,31 +26,36 @@ ifeq ($(arch),)
   COMPILER          := g++
   ARCHITECTURE      := 
   ARCHCOMPILERFLAGS :=
+  ARCHLINKERFLAGS   :=
 endif
 
 ifeq ($(arch),X64) 
   COMPILER          := g++-5
   ARCHITECTURE      := -m64
   ARCHCOMPILERFLAGS :=
+  ARCHLINKERFLAGS   :=
 endif
 
 ifeq ($(arch),ARMV7HF)
   COMPILER          := arm-linux-gnueabihf-g++-5
   ARCHITECTURE      := -march=armv7-a
-# ARCHCOMPILERFLAGS := -fasynchronous-unwind-tables -mapcs-frame -mthumb -mtpcs-frame -mtpcs-leaf-frame
+# ARCHCOMPILERFLAGS := -fasynchronous-unwind-tables -mapcs-frame
   ARCHCOMPILERFLAGS := -fasynchronous-unwind-tables -mapcs-frame -mthumb -mtpcs-frame -mtpcs-leaf-frame
+  ARCHLINKERFLAGS   :=
 endif
 
 ifeq ($(arch),ARMV5TE)
   COMPILER          := arm-linux-gnueabi-g++-5
   ARCHITECTURE      := -march=armv5te -mtune=xscale
-# ARCHCOMPILERFLAGS := -fasynchronous-unwind-tables -mapcs-frame -mthumb -mtpcs-frame -mtpcs-leaf-frame
+# ARCHCOMPILERFLAGS := -fasynchronous-unwind-tables -mapcs-frame 
   ARCHCOMPILERFLAGS := -fasynchronous-unwind-tables -mapcs-frame -mthumb -mtpcs-frame -mtpcs-leaf-frame
+  ARCHLINKERFLAGS   :=
 endif 
 
 
 COMPILERFLAGS :=  -std=c++11 -fPIC -Wall -Wno-unknown-pragmas -Wno-unused-parameter -funwind-tables -Wextra -O0 -c -pthread -fno-omit-frame-pointer
-LINKERFLAGS   :=  -pthread -static-libgcc -static-libstdc++ -rdynamic -Wl,--no-as-needed -ldl -L$(LIBSPATH) -Wl,-rpath,$(LIBSPATHEXE) 
+#LINKERFLAGS   :=  -pthread -static-libgcc -static-libstdc++ -rdynamic -Wl,--no-as-needed -ldl -L$(LIBSPATH) -Wl,-rpath,$(LIBSPATHEXE)
+LINKERFLAGS   :=  -pthread -rdynamic -Wl,--no-as-needed -ldl -L$(LIBSPATH) -Wl,-rpath,$(LIBSPATHEXE)  
 
 
 DEBUG = 
@@ -59,8 +63,8 @@ ifeq ($(dbg),1)
   DEBUG = -g
 endif
 
-DLINKERFLAGS  	 := $(ARCHITECTURE) $(LINKERFLAGS) -shared
-SLINKERFLAGS  	 := $(ARCHITECTURE) $(LINKERFLAGS)
+DLINKERFLAGS  	 := $(ARCHITECTURE) $(LINKERFLAGS) $(ARCHLINKERFLAGS) -shared
+SLINKERFLAGS  	 := $(ARCHITECTURE) $(LINKERFLAGS) $(ARCHLINKERFLAGS)
 DCOMPILERFLAGS   := $(ARCHITECTURE) $(COMPILERFLAGS) $(DEBUG) $(ARCHCOMPILERFLAGS) $(INCPATH)
 SCOMPILERFLAGS   := $(ARCHITECTURE) $(COMPILERFLAGS) $(DEBUG) $(ARCHCOMPILERFLAGS) $(INCPATH)
 
